welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:1: error: identifier expected but ']' found.
public int indexOfMaximum(int[] tab) {
                              ^indexOfMaxValue:13: error: ']' expected but '}' found.
 }
 ^